--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-      <h1>Help</h1>
+    {{> header}}
     <p>{{message}}</p>
+    {{> footer}}
   </body>
 </html>
