--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,10 +1,15 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    {{> header}}
-    <img src="/img/robot.png" alt="My profile photo" />
+    <div class="main-content">
+      {{> header}}
+      <img class="portrait" src="/img/robot.png" alt="My profile photo" />
+    </div>
+    
     {{> footer}}
   </body>
 </html>
