--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,10 +1,15 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
+    <title>Help</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    {{> header}}
-    <p>{{message}}</p>
+    <div class="main-content">
+      {{> header}}
+      <p>{{message}}</p>
+    </div>
+    
     {{> footer}}
   </body>
 </html>
