--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,10 +1,14 @@
 <html>
   <head>
+    <title>Weather</title>
+    <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/app.js"></script>
   </head>
   <body>
-    {{> header}}
+    <div class="main-content">
+      {{> header}}
+    </div>
     {{> footer}}
   </body>
 </html>
