--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,6 +8,7 @@
   <body>
     <div class="main-content">
       {{> header}}
+      <p>Use this site to get your weather!</p>
     </div>
     {{> footer}}
   </body>
