--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
   <body>
     <div class="main-content">
       {{> header}}
+      <p>This site was created by Edwin. It uses data from mapbox and weatherstack.</p>
       <img class="portrait" src="/img/robot.png" alt="My profile photo" />
     </div>
     
